--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,6 @@
 		"resolveJsonModule": true,
 		"skipDefaultLibCheck": true
 	},
-	"include": [
-		"./test",
-		"./typechain-types",
-		"./deploy",
-		"./types.d.ts"
-	],
-	"files": [
-		"./hardhat.config.ts"
-	]
+	"include": ["./test", "./typechain-types", "./deploy", "./types.d.ts"],
+	"files": ["./hardhat.config.ts"]
 }
